# jsonl-tools

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
docs/: bbedit-install.md
editors/bbedit/: install-filters.sh
editors/bbedit/filters/: Normalize JSONL.sh  Pretty Print JSONL Record.sh  Validate JSONL.sh
editors/bbedit/module/: Info.plist  Makefile
editors/bbedit/module/sdk/: BBLMInterface.h  BBLMInterface.mm  BBLMTextIterator.h  PROVENANCE.md
editors/bbedit/module/src/: JSONL.mm  SDKConstants.mm
editors/bbedit/module/test/: harness.mm
editors/bbedit/module/test/fixtures/: parity.jsonl  summaries.jsonl
editors/bbedit/test/: filters.test.js
editors/zed/: Cargo.toml  LICENSE  README.md  extension.toml
editors/zed/languages/jsonl/: config.toml  outline.scm
editors/zed/src/: lib.rs
examples/: sample.jsonl
